[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-warehouse-rl"
version = "1.0.0"
description = "FastAPI-hosted autonomous warehouse OpenEnv runtime."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110,<1.0",
    "uvicorn>=0.29,<1.0",
    "pydantic>=2.0,<3.0",
    "openai>=2.7.2,<3.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["env*", "server*"]
